bindings/python/llvm/types.py


    library.LLVMIsPackedStruct.argtypes = [Type]
    library.LLVMIsPackedStruct.restype = bool

    library.LLVMLabelTypeInContext.argtypes = [Context]
    library.LLVMLabelTypeInContext.result = c_object_p

    library.LLVMPPCFP128TypeInContext.argtypes = [Context]
    library.LLVMPPCFP128TypeInContext.result = c_object_p

    library.LLVMPointerType.argtypes = [Type, c_uint]
    library.LLVMPointerType.restype = c_object_p

    library.LLVMStructCreateNamed.argtypes = [Context, c_char_p]
    library.LLVMStructCreateNamed.restype = c_object_p

    library.LLVMStructSetBody.argtypes = [Type, POINTER(c_object_p), c_uint,
            c_int]

    library.LLVMStructTypeInContext.argtypes = [Context, POINTER(c_object_p),
            c_uint, c_int]
    library.LLVMStructTypeInContext.result = c_object_p

    library.LLVMTypeIsSized.argtypes = [Type]
    library.LLVMTypeIsSized.restype = bool

    library.LLVMVectorType.argtypes = [Type, c_uint]
    library.LLVMVectorType.restype = c_object_p

    library.LLVMVoidTypeInContext.argtypes = [Context]
    library.LLVMVoidTypeInContext.result = c_object_p

    library.LLVMX86FP80TypeInContext.argtypes = [Context]
    library.LLVMX86FP80TypeInContext.result = c_object_p

    library.LLVMX86MMXTypeInContext.argtypes = [Context]
    library.LLVMX86MMXTypeInContext.result = c_object_p

register_library(lib)

for name, value in enumerations.TypeKinds:
    TypeKind.register(name, value)
